--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1082,3 +1082,14 @@ a {
 }
 
 @include altBox(1);
+
+
+[draggable="true"] {
+  /*
+ To prevent user selecting inside the drag source
+*/
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
