Menu level changes for process flows

--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -146,6 +146,58 @@
         </div>
       </ng-container>
       <ng-container *ngIf="
+      hasConnectorsPermission||
+      hasDataFormatPermission||
+      hasAgentsPermission||hasFlowsPermission
+    ">
+        <div class="icon-block-group text-secondary border-top border-border pt-3">
+          <span *ngIf="showSideNav" class="nav-active d-flex align-items-center">
+            <span>PROCESS FLOWS</span>
+          </span>
+          <div *ngIf="showSideNav" class="dsi padding" [ngClass]="{
+              'dsi-drop-down': openPanel['processFlows'],
+              'dsi-drop-up': !openPanel['processFlows']
+            }" (click)="togglePanel('processFlows')"></div>
+        </div>
+        <!-- <div *ngIf="hasPartnerPermission" #partnerRoute="routerLinkActive"
+                    class="icon-block d-flex align-items-center my-3" [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
+                    routerLinkActive="text-primary bg-white active" [routerLink]="['pm']" id="partnerManager"
+                    (mouseover)="hover.partner = true" (mouseleave)="hover.partner = false">
+                    <div class="d-flex align-items-center">
+                        <span [ngClass]="{'nav-inactive':}" class="dsi dsi-partner"></span>
+                        <span class="text" ["partnerRoute.isActive" class="fa fa-angle-right mr-3"></spanngClass]="{'text-accent':hover.partner}">Partners</span>
+                    </div>
+                    <span *ngIf="partnerRoute.isActive" class="fa fa-angle-right mr-3"></span>
+                </div> -->
+        <div *ngIf="openPanel['processFlows']">
+          <div *ngIf="hasConnectorsPermission" #nodeRoute="routerLinkActive"
+            class="icon-block d-flex align-items-center my-3"
+            [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
+            routerLinkActive="text-primary bg-white active" [routerLink]="['node']" id="_nodes">
+            <div class="d-flex align-items-center">
+              <span [ngClass]="{'nav-inactive':!nodeRoute.isActive}" class="dsi dsi-connector"></span>
+              <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
+                'fw-600 nav-active': nodeRoute.isActive,
+                'nav-inactive': !nodeRoute.isActive
+              }">Nodes</span>
+            </div>
+          </div>
+          <div *ngIf="hasConnectorsPermission" #pfRoute="routerLinkActive"
+          class="icon-block d-flex align-items-center my-3"
+          [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
+          routerLinkActive="text-primary bg-white active" [routerLink]="['processFlow']" id="_con">
+          <div class="d-flex align-items-center">
+            <span [ngClass]="{'nav-inactive':!pfRoute.isActive}" class="dsi dsi-connector"></span>
+            <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
+              'fw-600 nav-active': pfRoute.isActive,
+              'nav-inactive': !pfRoute.isActive
+            }">Flows</span>
+          </div>
+        </div>
+        
+        </div>
+      </ng-container>
+      <ng-container *ngIf="
           hasGroupsPermission ||
           hasUsersPermission ||
           hasBotPermission ||
