--- a/src/app/utils/structure-field/structure-field.component.html
+++ b/src/app/utils/structure-field/structure-field.component.html
@@ -53,9 +53,12 @@
                         *ngIf="(form.get('properties.password') && form.get('properties.password').value) || (checkSubType())"
                         ngbTooltip="Secure">S</span>
                     <span
-                        class="ml-2 rounded-circle properties password d-flex justify-content-center align-items-center text-white fw-500 font-12"
+                        class="ml-2 rounded-circle properties schema-free d-flex justify-content-center align-items-center text-white fw-500 font-10"
                         *ngIf="(form.get('properties.schemaFree') && form.get('properties.schemaFree').value) || (checkSubType())"
-                        ngbTooltip="Schema Less">SL</span>
+                        ngbTooltip="Schema Less">SF</span>
+                    <span
+                        class="ml-1 d-flex justify-content-center align-items-center text-primary fw-500 font-11"
+                        *ngIf="(form.get('properties.schemaFree') && form.get('properties.schemaFree').value) || (checkSubType())">(BETA)</span>
                     <span class="ml-2 advanced-badge hover"
                         *ngIf="form.get('properties.pattern') && form.get('properties.pattern').value">
                         Regex
